--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,10 +34,10 @@ services:
   ipfs0:
     container_name: ipfs0
     image: ipfs/kubo:release
-    #    ports:
-    #      - "4001:4001" # ipfs swarm - expose if needed/wanted
-    #      - "5001:5001" # ipfs api - expose if needed/wanted
-    #      - "8080:8080" # ipfs gateway - expose if needed/wanted
+    ports:
+      #      - "4001:4001" # ipfs swarm - expose if needed/wanted
+      - "5001:5001" # ipfs api - expose if needed/wanted
+      - "8080:8080" # ipfs gateway - expose if needed/wanted
     volumes:
       - ./compose/ipfs0:/data/ipfs
 
@@ -53,13 +53,20 @@ services:
       CLUSTER_CRDT_TRUSTEDPEERS: "*" # Trust all peers in Cluster
       CLUSTER_RESTAPI_HTTPLISTENMULTIADDRESS: /ip4/0.0.0.0/tcp/9094 # Expose API
       CLUSTER_MONITORPINGINTERVAL: 2s # Speed up peer discovery
+
+      CLUSTER_REPLICATIONFACTORMIN: 2
+      CLUSTER_REPLICATIONFACTORMAX: 2
+      CLUSTER_DISABLEREPINNING: false
+      CLUSTER_STATESYNCINTERVAL: "0m30s"
+      CLUSTER_PINRECOVERINTERVAL: "1m0s"
+
     ports:
       - "9094:9094" # http api
-    #      - "9095:9095" # proxy api
-    #      - "9096:9096" # cluster swarm, other peers connect via this port
-    #    ports:
-    #      # Open API port (allows ipfs-cluster-ctl usage on host)
-    #      - "127.0.0.1:9094:9094"
+      #      - "9095:9095" # proxy api
+      #      - "9096:9096" # cluster swarm, other peers connect via this port
+      #    ports:
+      #      # Open API port (allows ipfs-cluster-ctl usage on host)
+      #- "127.0.0.1:9094:9094"
     #      # The cluster swarm port would need  to be exposed if this container
     #      # was to connect to cluster peers on other hosts.
     #      # But this is just a testing cluster.
@@ -88,6 +95,13 @@ services:
       CLUSTER_IPFSHTTP_NODEMULTIADDRESS: /dns4/ipfs1/tcp/5001
       CLUSTER_CRDT_TRUSTEDPEERS: "*"
       CLUSTER_MONITORPINGINTERVAL: 2s # Speed up peer discovery
+
+      CLUSTER_REPLICATIONFACTORMIN: 2
+      CLUSTER_REPLICATIONFACTORMAX: 2
+      CLUSTER_DISABLEREPINNING: false
+      CLUSTER_STATESYNCINTERVAL: "0m30s"
+      CLUSTER_PINRECOVERINTERVAL: "1m0s"
+
     volumes:
       - ./compose/cluster1:/data/ipfs-cluster
     command:
@@ -110,6 +124,13 @@ services:
       CLUSTER_IPFSHTTP_NODEMULTIADDRESS: /dns4/ipfs2/tcp/5001
       CLUSTER_CRDT_TRUSTEDPEERS: "*"
       CLUSTER_MONITORPINGINTERVAL: 2s # Speed up peer discovery
+
+      CLUSTER_REPLICATIONFACTORMIN: 2
+      CLUSTER_REPLICATIONFACTORMAX: 2
+      CLUSTER_DISABLEREPINNING: false
+      CLUSTER_STATESYNCINTERVAL: "0m30s"
+      CLUSTER_PINRECOVERINTERVAL: "1m0s"
+
     volumes:
       - ./compose/cluster2:/data/ipfs-cluster
     command:
@@ -132,6 +153,13 @@ services:
       CLUSTER_IPFSHTTP_NODEMULTIADDRESS: /dns4/ipfs3/tcp/5001
       CLUSTER_CRDT_TRUSTEDPEERS: "*"
       CLUSTER_MONITORPINGINTERVAL: 2s # Speed up peer discovery
+
+      CLUSTER_REPLICATIONFACTORMIN: 2
+      CLUSTER_REPLICATIONFACTORMAX: 2
+      CLUSTER_DISABLEREPINNING: false
+      CLUSTER_STATESYNCINTERVAL: "0m30s"
+      CLUSTER_PINRECOVERINTERVAL: "1m0s"
+
     volumes:
       - ./compose/cluster3:/data/ipfs-cluster
     command:
@@ -154,6 +182,13 @@ services:
       CLUSTER_IPFSHTTP_NODEMULTIADDRESS: /dns4/ipfs4/tcp/5001
       CLUSTER_CRDT_TRUSTEDPEERS: "*"
       CLUSTER_MONITORPINGINTERVAL: 2s # Speed up peer discovery
+
+      CLUSTER_REPLICATIONFACTORMIN: 2
+      CLUSTER_REPLICATIONFACTORMAX: 2
+      CLUSTER_DISABLEREPINNING: false
+      CLUSTER_STATESYNCINTERVAL: "0m30s"
+      CLUSTER_PINRECOVERINTERVAL: "1m0s"
+
     volumes:
       - ./compose/cluster4:/data/ipfs-cluster
     command:
@@ -176,6 +211,13 @@ services:
       CLUSTER_IPFSHTTP_NODEMULTIADDRESS: /dns4/ipfs5/tcp/5001
       CLUSTER_CRDT_TRUSTEDPEERS: "*"
       CLUSTER_MONITORPINGINTERVAL: 2s # Speed up peer discovery
+
+      CLUSTER_REPLICATIONFACTORMIN: 2
+      CLUSTER_REPLICATIONFACTORMAX: 2
+      CLUSTER_DISABLEREPINNING: false
+      CLUSTER_STATESYNCINTERVAL: "0m30s"
+      CLUSTER_PINRECOVERINTERVAL: "1m0s"
+
     volumes:
       - ./compose/cluster5:/data/ipfs-cluster
     command:
