Use swarm key for 3 out of 7 ipfs nodes

--- a/compose/ipfs0/config
+++ b/compose/ipfs0/config
@@ -118,7 +118,8 @@
   "Routing": {
     "AcceleratedDHTClient": false,
     "Methods": null,
-    "Routers": null
+    "Routers": null,
+    "Type": "dht"
   },
   "Swarm": {
     "AddrFilters": null,
